--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Youtubeダウンロード</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  
+  <title>Youtubeダウンローダー</title>
   <style>
     #input-url {
       width: 400px;
     }
+    body{
+      background-image: url('background.jpg');
+      background-size: cover;
+    }
   </style>
 </head>
 <body>
-  <h1>YouTubeダウンロード</h1>
-  <form id="download-form">
-    <input id="input-url" type="text" placeholder="https://www.youtube.com/watch?v=bnc1NjaABCD">
-    <select name="type" id="select-file-type">
-      <option value="mp4" selected>mp4</option>
-      <option value="mp3">mp3</option>
-    </select>
-    <br>
-    <br>
-    <button id="download-button">ダウンロード</button>
-  </form>
+  <div class="container text-center" style="height: 60vh;margin-top: 40vh">
+    <h1 class="">YouTubeダウンローダー</h1>
+    <div class="">
+      <form id="download-form">
+        <div class="input-group">
+          <input id="input-url" type="text" class="form-control" placeholder="https://www.youtube.com/watch?v=bnc1NjaABCD">
+          <select name="type" id="select-file-type">
+            <option value="mp4" selected>mp4</option>
+            <option value="mp3">mp3</option>
+          </select>
+          <button id="download-button" type="submit" class="btn btn-primary">ダウンロード</button>
+        </div>
+      </form>
+    </div>
+    <div id="download-spinner" class="spinner-border text-primary" style="display: none;margin: 10px auto;" role="status">
+      <span class="sr-only"></span>
+    </div>
+    <div id="download-warning" class="alert alert-warning" style="display: none;" role="alert">
+      URLのフォーマットが間違っています
+    </div>
+    <div id="download-danger" class="alert alert-danger" style="display: none;" role="alert">
+      ダウンロードに失敗しました。時間をおいてリトライしてください。<br/>
+      何度かリトライしてもダウンロードできない場合は <a href="https://twitter.com/Jirno7pr">Jirno(@Jirno7pr)</a> までご連絡ください。
+    </div>
+  </div>
   <script>
     /**
      * querystringをパースする
@@ -35,14 +58,22 @@
     const elInputUrl = document.getElementById('input-url');
     const elSelectFileType = document.getElementById('select-file-type');
     const elSubmitButton = document.getElementById('download-button');
+    const elSpinner = document.getElementById('download-spinner');
+    const elWarning = document.getElementById('download-warning');
+    const elDanger = document.getElementById('download-danger');
+
 
     elDownloadForm.addEventListener('submit', (event) => {
       event.preventDefault();
+
+      elWarning.style.display = "none";
+      elDanger.style.display = "none";
 
       // バリデーションチェック
       const url = elInputUrl.value;
       if (!/^https:\/\/www.youtube.com\/watch\?v=/.test(url)) {
         console.error('url format error');
+        elWarning.style.display = "block";
         return;
       }
 
@@ -55,10 +86,13 @@
 
       elSubmitButton.disabled = 'true';
       elSubmitButton.innerText = 'ダウンロード中';
+      elSpinner.style.display = "block";
+
       // ファイルダウンロード
       fetch(`/api/youtube/${youtubeId}?fileType=${fileType}`)
         .then((response) => {
           if (!response.ok) {
+            elDanger.style.display = "block";
             throw new Error('Network error');
           }
           return response.blob();
@@ -75,8 +109,19 @@
         .finally(() => {
           elSubmitButton.disabled = '';
           elSubmitButton.innerText = 'ダウンロード';
+          elSpinner.style.display = "none";
         });
     });
   </script>
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  -->
 </body>
 </html>
