低画質の動画がDLできない問題を修正

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -25,7 +25,7 @@
     <div class="">
       <form id="download-form">
         <div class="input-group">
-          <input id="input-url" type="text" class="form-control" placeholder="https://www.youtube.com/watch?v=bnc1NjaABCD">
+          <input id="input-url" type="text" class="form-control" placeholder="https://www.youtube.com/watch?v=qW78HuQklOA">
           <select name="type" id="select-file-type">
             <option value="mp4" selected>mp4</option>
             <option value="mp3">mp3</option>
@@ -33,6 +33,11 @@
           <button id="download-button" type="submit" class="btn btn-primary">ダウンロード</button>
         </div>
       </form>
+    </div>
+    <div class="card" style="margin-top: 1vh">
+      <div class="card-body">
+        <p class="card-text">動画によってはダウンロードできないみたいです。対策検討中です。</p>
+      </div>
     </div>
     <div id="download-spinner" class="spinner-border text-primary" style="display: none;margin: 10px auto;" role="status">
       <span class="sr-only"></span>
