トップコメント修正

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="card" style="margin-top: 1vh">
       <div class="card-body">
-        <p class="card-text">動画によってはダウンロードできないみたいです。対策検討中です。</p>
+        <p class="card-text">不具合等ありましたら<a href="https://twitter.com/Jirno7pr">Jirno(@Jirno7pr)</a>までどうぞ</p>
       </div>
     </div>
     <div id="download-spinner" class="spinner-border text-primary" style="display: none;margin: 10px auto;" role="status">
